Refactor CSS variables structure. (#5)
* Fix permissions of standalone files to 644.

* Rewrite breakpoint width calculations.

* Code cleanup.

* Remove compiled files from version control.

* Remove sass functions, will re-add if needed in the future.

* Refactor Sass code to fully implement automated css4 variables.

* Add stylesheets/variables to watch dirs.

* block.css - moveing Allan's changes made to master branch, replacing mixins with CSS vars.

* functions.php - moving Allan's changes made to master branch.

* stylesheets/_entries.scss - moving Allan's changes made to master branch.

* stylesheets/_forms.scss - moving Allan's changes made to master branch.

* stylesheets/_site-branding.scss - moving Allan's changes made to master branch.

* stylesheets/_site-navigation.scss - moving Allan's changes made to master branch.

* stylesheets/_typography.scss - moving Allan's changes made to master branch.

* template-parts/content-page.php - moving Allan's changes made to master branch.

* css/blocks.css - finish up converting to CSS variables, code clean up

* editor.css - moving Allan's changes made to master branch, and code clean up.

* Code cleanup.

* Add css variables index.

* Verify variable conversions and remove comments.

* Remove second set of commented mixins.

--- a/editor.scss
+++ b/editor.scss
@@ -1,34 +1,7 @@
 
-// Root CSS variables.
-@import "stylesheets/variables/base";
-
-// Includes.
-@import "stylesheets/inc/animations";
-@import "stylesheets/inc/mixins";
-@import "stylesheets/inc/functions";
-
-// Root css-variables
-body {
-	// for each variable map
-	@each $var-map-name, $var-map in $var-maps {
-		// for each variable in the variable map
-		@each $var, $val in $var-map {
-			// if it is a map, go another level deep
-			@if type-of($val) == map {
-				// each in the map
-				@each $var-n, $val-n in $val {
-					// do the definition
-					$prop: --#{$var-map-name}-#{$var}-#{$var-n};
-					#{$prop}: $val-n;
-				}
-			} @else {
-				// do the definition
-				$prop: --#{$var-map-name}-#{$var};
-				#{$prop}: $val;
-			}
-		}
-	}
-}
+// !Includes.
+@import "stylesheets/variables/index";
+@import "stylesheets/inc/index";
 
 @import "stylesheets/typography.scss";
 @import "stylesheets/elements.scss";
@@ -36,7 +9,7 @@ body {
 
 // Fix line heights in forms
 .editor-rich-text__tinymce.mce-content-body {
-	@include globalvar(line-height, body);
+	line-height: $x-font-leading-body;
 }
 
 // Reset font scale to pixels for the editor
@@ -67,18 +40,18 @@ blockquote {
 	&.wp-block-quote.is-style-large {
 
 		@include media(tablet) {
-			@include globalvar( margin-right, 0 );
+			margin-right: 0;
 		}
 	}
 
 	&:not(.is-large):not(.is-style-large) {
 		border-left: none;
-		@include globalvar( margin-right, 0 );
-		@include globalvar( padding-left, 0 );
+		margin-right: 0;
+		padding-left: 0;
 	}
 
 	.wp-block-quote__citation {
-		@include globalvar( padding-left, sm );
+		padding-left: $x-space-sm;
 	}
 }
 
