--- a/stylesheets/inc/_mixins.scss
+++ b/stylesheets/inc/_mixins.scss
@@ -1,12 +1,13 @@
 
-// Screen widths.
-
-$mobile_width: calc( 4 * ( 80px + 25px ) - 25px );
-$tablet_width: calc( 8 * ( 80px + 25px ) - 25px );
-$desktop_width: calc( 10 * ( 80px + 25px ) - 25px );
-$wide_width: calc( 12 * ( 80px + 25px ) - 25px );
-
 // Mixins
+
+$mobile_width: 4 * ( 80px + 25px ) - 25px;
+
+$tablet_width: 8 * ( 80px + 25px ) - 25px;
+
+$desktop_width: 10 * ( 80px + 25px ) - 25px;
+
+$wide_width: 12 * ( 80px + 25px ) - 25px;
 
 @mixin media( $res ) {
 	@if mobile == $res {
@@ -24,7 +25,6 @@ $wide_width: calc( 12 * ( 80px + 25px ) - 25px );
 			@content;
 		}
 	}
-
 	@if wide == $res {
 		@media only screen and (min-width: $wide_width) {
 			@content;
@@ -64,33 +64,14 @@ $wide_width: calc( 12 * ( 80px + 25px ) - 25px );
 	}
 }
 
-@mixin block-margin( $v-space: sm, $h-space: sm ) {
-	@include globalvar( margin-top, $v-space );
-	@include globalvar( margin-bottom, $v-space );
-	@include globalvar( margin-left, $h-space );
-	@include globalvar( margin-right, $h-space );
-}
-
-@mixin block-padding( $v-space: sm, $h-space: sm ) {
-	@include globalvar( padding-top, $v-space );
-	@include globalvar( padding-bottom, $v-space );
-	@include globalvar( padding-left, $h-space );
-	@include globalvar( padding-right, $h-space );
-}
-
 @mixin grid_column_width( $columns: 6 ) {
-	width: $columns * ( #{map-get($grid, column)} + #{map-get($grid, gutter)} ) - #{map-get($grid, gutter)};
-}
-
-@mixin grid_column_width_margins( $columns: 6 ) {
-	//	width: calc( #{$width-column-2} - #{map-get($space_vars, sm)} - #{map-get($space_vars, sm)} );
-	width: calc( var(--grid-column-#{$columns} ) - ( #{map-get($space, sm)} * 2 ) );
+	width: $columns * ( #{$x-grid-column} + #{$x-grid-gutter} ) - #{$x-grid-gutter};
 }
 
 @mixin rounded($radius: 0.5em) {
-	overflow: hidden;
 	-webkit-border-radius: $radius;
 	-moz-border-radius: $radius;
 	border-radius: $radius;
+	overflow: hidden;
 }
 
