--- a/stylesheets/_typography.scss
+++ b/stylesheets/_typography.scss
@@ -1,10 +1,9 @@
 
 /** === Typography === */
-
 body {
 
 	// font-size base for mobile
-	@include globalvar(font-size, base);
+	font-size: $x-font-size-base;
 
 	@include media(tablet) {
 
@@ -19,9 +18,9 @@ input,
 select,
 optgroup,
 textarea {
-	@include globalvar(font-family, body);
-	@include globalvar(line-height, body);
-	@include globalvar(color, base);
+	font-family: $x-font-family-body;
+	line-height: $x-font-leading-body;
+	color: $x-color-words-base;
 	@include font-smoothing;
 	font-weight: 400;
 }
@@ -30,87 +29,82 @@ textarea {
 h1, h2, h3, h4, h5, h6 {
 	clear: both;
 	font-weight: 400;
-	@include globalvar(line-height, heading);
+	line-height: $x-font-leading-heading;
 	@include font-smoothing;
 }
 
 h2 {
-	@include globalvar(font-family, heading);
+	font-family: $x-font-family-heading;
 	font-weight: 200;
 	letter-spacing: .25rem;
 	text-transform: uppercase;
 }
 
 h5 {
-	@include globalvar(font-family, heading);
+	font-family: $x-font-family-heading;
 	font-weight: 500;
 	text-transform: uppercase;
 }
 
 h6 {
-	@include globalvar(font-family, heading);
+	font-family: $x-font-family-heading;
 	font-weight: 200;
 	letter-spacing: .125rem;
 	text-transform: uppercase;
 }
 
 /* text size */
-
 .text--xxxl,
 p.has-drop-cap:not(:focus):first-letter { // Drop cap font-size
-	@include globalvar(font-size, xxxl);
+	font-size: $x-font-size-xxxl;
 }
 
 h1,
 .text--xxl,
 big {
-	@include globalvar(font-size, xxl);
+	font-size: $x-font-size-xxl;
 }
 
 h2,
 .text--xl,
 .has-larger-font-size {
-	@include globalvar(font-size, xl);
+	font-size: $x-font-size-xl;
 }
 
 .site-title,
 h3,
 .text--lg,
 .has-large-font-size {
-	@include globalvar(font-size, lg);
+	font-size: $x-font-size-lg;
 }
 
 h4,
 .text--md,
 .has-regular-font-size {
-	@include globalvar(font-size, md);
+	font-size: $x-font-size-md;
 }
 
 .text--sm,
 small,
 .has-small-font-size {
-	@include globalvar(font-size, sm);
+	font-size: $x-font-size-sm;
 }
 
 .text--xs {
-	@include globalvar(font-size, xs);
+	font-size: $x-font-size-xs;
 }
 
 .main-navigation,
 .hentry .entry-meta > span {
-
-	@include globalvar(font-family, heading);
-	@include globalvar(font-size, xs);
-
-	@include media( mobile ) {
-		@include globalvar(font-size, sm);
+ 	font-family: $x-font-family-heading;
+	font-size: $x-font-size-xs;
+ 	@include media( mobile ) {
+		font-size: $x-font-size-sm;
 	}
 }
-
-.main-navigation > div > ul > li > a,
+ .main-navigation > div > ul > li > a,
 .hentry .entry-meta .posted-on {
-
-	font-weight: 400;
+ 	font-weight: 400;
 	letter-spacing: .125em;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -124,28 +118,28 @@ blockquote,
 blockquote.is-large {
 
 	p {
-		@include globalvar(font-size, lg);
+		font-size: $x-font-size-lg;
 		font-style: normal;
 	}
 
 	cite {
-		@include globalvar(font-family, heading);
-		@include globalvar(font-size, xs);
+		font-family: $x-font-family-heading;
+		font-size: $x-font-size-xs;
 		font-style: normal;
 		font-weight: 500;
 	}
 }
 
 pre {
-	@include globalvar(font-family, code);
-	@include globalvar(font-size, sm);
+	font-family: $x-font-family-code;
+	font-size: $x-font-size-sm;
 	line-height: 1.6;
 	@include font-smoothing;
 }
 
 code, kbd, tt, var, samp {
-	@include globalvar(font-size, md);
-	@include globalvar(font-family, code);
+	font-size: $x-font-size-md;
+	font-family: $x-font-family-code;
 	@include font-smoothing;
 }
 
