--- a/stylesheets/variables/_index.scss
+++ b/stylesheets/variables/_index.scss
@@ -1,4 +1,4 @@
-@import "stylesheets/variables/grid";
-@import "stylesheets/variables/space";
-@import "stylesheets/variables/fonts";
-@import "stylesheets/variables/colors";
+@import "grid";
+@import "space";
+@import "fonts";
+@import "colors";
