Refactor to fix css-vars action.

--- a/editor.scss
+++ b/editor.scss
@@ -8,7 +8,7 @@
 @import "stylesheets/typography";
 @import "stylesheets/elements";
 
-@import "css/blocks";
+@import "css/blocks.scss";
 
 // Fix line heights in forms
 .editor-rich-text__tinymce.mce-content-body {
