--- a/stylesheets/variables/_fonts.scss
+++ b/stylesheets/variables/_fonts.scss
@@ -9,6 +9,7 @@ $font-size-responsive-ratio: 1.167;
 
 $x-font-size-base: $font-size-base;
 $x-font-size-ratio: $font-size-ratio;
+$x-font-size-responsive-ratio: $font-size-responsive-ratio;
 
 // Using `unquote()` on the variables below to prevent node-sass segmentation fault.
 
