Update various link styling.

--- a/stylesheets/_elements.scss
+++ b/stylesheets/_elements.scss
@@ -15,17 +15,11 @@ body {
 	background-color: $x-color-shade-white;
 }
 
-a {
-	color: $x-color-primary-base;
-}
+a {}
 
-a:visited {
+a:visited {}
 
-}
-
-a:hover, a:focus, a:active {
-
-}
+a:hover, a:focus, a:active {}
 
 a:focus {
 
