--- a/stylesheets/_site-navigation.scss
+++ b/stylesheets/_site-navigation.scss
@@ -18,7 +18,7 @@
 				display: block;
 
 				&:hover {
-					color: $x-color-secondary-base;
+					color: $x-color-accent-base;
 					text-decoration: none;
 				}
 			}
@@ -27,12 +27,16 @@
 				content: "";
 				display: none;
 			}
+
+			&.current-menu-item a {
+				color: $x-color-accent-base;				
+			}
 		}
 
 		> li {
 
 			> a {
-				color: $x-color-primary-base;
+				color: $x-color-secondary-base;
 				@include link-transition;
 				clear: both;
 				display: block;
@@ -155,7 +159,8 @@
 				display: inline-block;
 
 				a {
-					font-size: $x-font-size-xs;
+					font-size: $x-font-size-sm;
+					font-weight: 600;
 					padding: $x-space-xs;
 				}
 
