--- a/stylesheets/_typography.scss
+++ b/stylesheets/_typography.scss
@@ -21,35 +21,34 @@ textarea {
 	font-family: $x-font-family-body;
 	line-height: $x-font-leading-body;
 	color: $x-color-words-base;
-	@include font-smoothing;
 	font-weight: 400;
 }
 
 .site-title,
 h1, h2, h3, h4, h5, h6 {
 	clear: both;
-	font-weight: 400;
+	color: $x-color-words-heading;
+	font-weight: 800;
+	font-family: $x-font-family-heading;
 	line-height: $x-font-leading-heading;
-	@include font-smoothing;
 }
 
 h2 {
 	font-family: $x-font-family-heading;
-	font-weight: 200;
-	letter-spacing: .25rem;
-	text-transform: uppercase;
+/*	font-weight: 200;*/
+/*	letter-spacing: .25rem;*/
+/*	text-transform: uppercase;*/
 }
 
 h5 {
 	font-family: $x-font-family-heading;
-	font-weight: 500;
+	letter-spacing: $x-font-letter-spacing;
 	text-transform: uppercase;
 }
 
 h6 {
 	font-family: $x-font-family-heading;
-	font-weight: 200;
-	letter-spacing: .125rem;
+	letter-spacing: $x-font-letter-spacing;
 	text-transform: uppercase;
 }
 
@@ -94,7 +93,7 @@ small,
 	font-size: $x-font-size-xs;
 }
 
-.main-navigation,
+/*.main-navigation,*/
 .hentry .entry-meta > span {
  	font-family: $x-font-family-heading;
 	font-size: $x-font-size-xs;
@@ -102,10 +101,10 @@ small,
 		font-size: $x-font-size-sm;
 	}
 }
- .main-navigation > div > ul > li > a,
+/* .main-navigation > div > ul > li > a,*/
 .hentry .entry-meta .posted-on {
  	font-weight: 400;
-	letter-spacing: .125em;
+	letter-spacing: $x-font-letter-spacing;
 	text-decoration: none;
 	text-transform: uppercase;
 }
@@ -118,8 +117,8 @@ blockquote,
 blockquote.is-large {
 
 	p {
-		font-size: $x-font-size-lg;
-		font-style: normal;
+		font-size: $x-font-size-md;
+		/*font-style: normal;*/
 	}
 
 	cite {
@@ -133,15 +132,15 @@ blockquote.is-large {
 pre {
 	font-family: $x-font-family-code;
 	font-size: $x-font-size-sm;
-	line-height: 1.6;
-	@include font-smoothing;
-}
+	line-height: $x-font-leading-body;
+/*	@include font-smoothing;
+*/}
 
 code, kbd, tt, var, samp {
-	font-size: $x-font-size-md;
+	font-size: $x-font-size-sm;
 	font-family: $x-font-family-code;
-	@include font-smoothing;
-}
+/*	@include font-smoothing;
+*/}
 
 mark, ins {
 	text-decoration: none;
