--- a/stylesheets/_entries.scss
+++ b/stylesheets/_entries.scss
@@ -7,7 +7,7 @@
 
 	// Style all elemnts first
 	> * {
-		margin: $x-space-sm;
+		margin: $x-space-md;
 		max-width: calc( 100% - ( #{$x-space-sm} * 2 ) );
 
 		&:first-child {
@@ -51,14 +51,15 @@
 
 	.entry-title {
 		margin: $x-space-sm;
-		color: $x-color-primary-base;
+		font-weight: 800;
 
 		a {
 			color: $x-color-primary-base;
 			@include link-transition;
 			color: inherit;
+			
 			&:hover {
-				color: $x-color-secondary-base;
+				color: $x-color-accent-base;
 				text-decoration: none;
 			}
 		}
@@ -74,6 +75,14 @@
 				margin-right: $x-space-column-3;
 			 	margin-left: auto;
 			}
+		}
+	}
+
+	@at-root .single .entry-title {
+		font-size: $x-font-size-xxxl;
+
+		@include media( tablet ) { 
+			margin: $x-space-lg 0;
 		}
 	}
 
