Update styling for various odd elements.

--- a/stylesheets/_wordpress.scss
+++ b/stylesheets/_wordpress.scss
@@ -192,7 +192,7 @@
 		border-top-color: $x-color-border-base;
 		font-weight: 500;
 		font-style: normal;
-		letter-spacing: .125rem;
+		letter-spacing: $x-font-letter-spacing;
 		text-transform: uppercase;
 		width: 100%;
 
