--- a/stylesheets/_elements.scss
+++ b/stylesheets/_elements.scss
@@ -35,9 +35,9 @@ p {
 }
 
 hr {
-	background-color: $x-color-shade-gray-3;
+	background-color: $x-color-shade-gray-2;
 	border: 0;
-	height: 1px;
+	height: 3px;
 	margin-bottom: 1.5em;
 }
 
@@ -49,7 +49,7 @@ acronym {
 }
 
 pre {
-	background-color: $x-color-shade-gray-1;
+	background-color: $x-color-shade-gray-2;
 	margin-bottom: $x-space-sm;
 	max-width: 100%;
 	overflow: auto;
@@ -176,7 +176,7 @@ blockquote.is-large {
 	
 	padding: $x-space-sm;
 	
-	border-top-color: $x-color-border-primary;
+	border-top-color: $x-color-border-base;
 
 	p {
 		padding: $x-space-xs 0;
